--- a/app/src/main/res/layout/weekly_ad_in_store.xml
+++ b/app/src/main/res/layout/weekly_ad_in_store.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2015 Staples, Inc. All rights reserved.
-  -->
 <com.staples.mobile.cfa.widget.AnimatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/inStoreTV"
+        android:id="@+id/availability"
         android:paddingTop="@dimen/verticalspacing_8dp"
         android:textSize="@dimen/fontsize_14sp"
         android:textColor="@color/staples_red"
@@ -21,14 +18,14 @@
         android:gravity="center"
         android:textStyle="bold"/>
     <ImageView
-        android:id="@+id/weekly_ad_image"
+        android:id="@+id/image"
         android:layout_width="@dimen/weekly_ad_image_width"
         android:layout_height="@dimen/weekly_ad_image_height"
         android:layout_gravity="center_horizontal"
         android:paddingTop="@dimen/verticalspacing_8dp"
         />
     <TextView
-        android:id="@+id/weekly_ad_title_text"
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/fontsize_14sp"
@@ -36,29 +33,7 @@
         android:maxLines="2"
         android:ellipsize="end"
         android:textColor="@color/staples_black"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/weekly_ad_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_12sp"
-            android:paddingTop="@dimen/verticalspacing_8dp"
-            android:paddingBottom="@dimen/verticalspacing_8dp"
-            android:textStyle="bold"
-            android:textColor="@color/staples_red"/>
-        <TextView
-            android:id="@+id/weekly_ad_price_extension"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/fontsize_10sp"
-            android:paddingLeft="3dp"
-            android:paddingTop="@dimen/verticalspacing_8dp"
-            android:paddingBottom="@dimen/verticalspacing_8dp"
-            android:textColor="@color/staples_middle_gray"
-            android:text="@string/each"
-            android:visibility="gone"/>
-    </LinearLayout>
+    <com.staples.mobile.cfa.widget.PriceSticker
+        android:id="@+id/pricing"
+        style="@style/SmallPriceSticker"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
