--- a/app/src/main/res/layout/cart_fragment.xml
+++ b/app/src/main/res/layout/cart_fragment.xml
@@ -89,14 +89,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/margin_16dp"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_18sp"
             android:text="@string/easy_returns"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/staples_middle_gray"
+            android:textColor="@color/staples_dark_gray"
             android:textSize="@dimen/fontsize_12sp"
             android:text="@string/easy_returns_conditions"
             />
