--- a/app/src/main/res/layout/sku_detail_list.xml
+++ b/app/src/main/res/layout/sku_detail_list.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.staples.mobile.cfa.widget.DataWrapper xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/wrapper"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</ListView>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    app:minGridWidth="@dimen/review_min_grid_width">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+</com.staples.mobile.cfa.widget.DataWrapper>
