--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -233,8 +233,12 @@
         <item name="android:inputType">number</item>
         <item name="android:imeOptions">actionDone</item>
         <item name="android:singleLine">true</item>
+        <item name="android:hint">1</item>
+        <item name="android:maxLength">4</item>
         <item name="android:gravity">center</item>
         <item name="android:textColorHint">@color/staples_black</item>
         <item name="android:textSize">@dimen/fontsize_18sp</item>
+        <item name="android:drawableRight">@drawable/ic_arrow_drop_down</item>
+        <item name="android:background">@drawable/bottom_frame</item>
     </style>
 </resources>
