--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2014 Staples, Inc. All rights reserved.
-  -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="0dp">
@@ -44,8 +40,7 @@
 			android:id="@+id/shipping_and_price_layout"
 			android:layout_below="@id/cartitem_title"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-		>
+			android:layout_height="wrap_content">
 
 			<TextView
 				android:id="@+id/overweight_warning"
@@ -64,8 +59,7 @@
 				android:textColor="@color/staples_white"
 				android:textSize="@dimen/fontsize_10sp"
 				android:textStyle="bold"
-				android:visibility="gone"
-			/>
+				android:visibility="gone"/>
 
 			<TextView
 				android:id="@+id/add_on_warning"
@@ -84,8 +78,7 @@
 				android:textColor="@color/staples_white"
 				android:textSize="@dimen/fontsize_10sp"
 				android:textStyle="bold"
-				android:visibility="gone"
-			/>
+				android:visibility="gone"/>
 
 		</RelativeLayout>
 
@@ -124,13 +117,10 @@
 			android:layout_below="@id/shipping_and_price_layout"
             android:layout_alignParentRight="true"
             android:layout_gravity="center_vertical"
-            android:drawableRight="@drawable/ic_arrow_drop_down"
             android:textSize="@dimen/fontsize_14sp"
             android:textColor="@color/staples_black"
-            android:maxLength="4"
             app:maxQuantity="10"
             app:popupWidth="120dp"/>
-
     </RelativeLayout>
 
     <!--horizontal rule-->
@@ -145,5 +135,3 @@
         android:visibility="gone"/>
 
 </RelativeLayout>
-
-<!--</LinearLayout>-->
