--- a/app/src/main/res/layout/sku_review_item.xml
+++ b/app/src/main/res/layout/sku_review_item.xml
@@ -24,31 +24,20 @@
             android:paddingLeft="@dimen/sku_padding_10"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/sku_review_attribution"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="@dimen/sku_padding_5">
-        <TextView
-            android:id="@+id/sku_review_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/staples_dark_gray"/>
-
-        <TextView
-            android:id="@+id/sku_review_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/staples_dark_gray"/>
-    </LinearLayout>
-
+        android:paddingTop="@dimen/sku_padding_5"
+        android:paddingBottom="@dimen/sku_padding_5"
+        android:textColor="@color/staples_dark_gray"/>
     <TextView
         android:id="@+id/sku_review_comments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="3"
         android:ellipsize="end"
-        android:textColor="@color/staples_black"
-        android:paddingTop="@dimen/sku_padding_5"/>
+        android:paddingTop="@dimen/sku_padding_5"
+        android:paddingBottom="@dimen/sku_padding_5"
+        android:textColor="@color/staples_black"/>
 </LinearLayout>
