--- a/app/src/main/res/layout/add_creditcard_fragment.xml
+++ b/app/src/main/res/layout/add_creditcard_fragment.xml
@@ -28,15 +28,38 @@
             android:layout_toRightOf="@+id/card_image" />
         <!--DLS: setting imeOptions to actionDone by default for use in profile, guest checkout will
             modify this to actionNext programatically when CID is displayed -->
-        <EditText
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/expirationDate"
-            android:inputType="date"
-            android:maxLength="5"
-            android:textSize="@dimen/fontsize_15sp"
-            android:hint="MM/YY"
-            android:imeOptions="actionDone"/>
+            android:orientation="horizontal">
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/expiration_month"
+                android:inputType="date"
+                android:maxLength="2"
+                android:textSize="@dimen/fontsize_15sp"
+                android:hint="MM"
+                android:imeOptions="actionNext"
+                android:paddingRight="@dimen/action_bar_quarter_margin"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/"
+                android:textSize="@dimen/fontsize_16sp"/>
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/expiration_year"
+                android:inputType="date"
+                android:maxLength="2"
+                android:textSize="@dimen/fontsize_15sp"
+                android:hint="YY"
+                android:paddingLeft="@dimen/action_bar_quarter_margin"
+                android:imeOptions="actionDone"/>
+        </LinearLayout>
+
+
         <EditText
             android:id="@+id/cid"
             android:layout_width="wrap_content"
@@ -46,7 +69,7 @@
             android:hint="@string/cid"
             android:textSize="@dimen/fontsize_15sp"
             android:visibility="gone"
-            android:layout_toRightOf="@+id/expirationDate"
+            android:layout_toRightOf="@+id/expiration_year"
             android:imeOptions="actionDone"
             android:singleLine="true"/>
     </LinearLayout>
