setting the max length of the phone number.

--- a/app/src/main/res/layout/address_block.xml
+++ b/app/src/main/res/layout/address_block.xml
@@ -73,6 +73,7 @@
         android:id="@+id/phoneNumber"
         style="@style/InputField"
         android:inputType="phone"
+        android:maxLength="14"
         android:hint="@string/phone_label"/>
     <com.staples.mobile.cfa.widget.DualHintEdit
         android:id="@+id/emailAddr"
