add to cart icon change and spacing fix

--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -65,6 +65,7 @@
     <dimen name="search_horizontal_offset">60dp</dimen>
     <dimen name="search_negative_horizontal_offset">-60dp</dimen>
     <dimen name="profile_text_view_height">80dp</dimen>
+    <dimen name="progress_bar_width">36dp</dimen>
 
     <dimen name="div_line">1px</dimen>
 </resources>
