--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bundle_item"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/fixed_grid_wide_height"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="@color/staples_white">
     <ImageView
@@ -13,10 +13,9 @@
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"/>
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:paddingTop="@dimen/action_bar_quarter_margin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/action_bar_half_margin"
         android:orientation="vertical">
         <TextView
             android:id="@+id/title"
@@ -47,19 +46,20 @@
             style="@style/SmallPriceSticker"
             android:layout_marginTop="@dimen/elevation_high"/>
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/action_bar_half_margin"
+            android:layout_marginBottom="@dimen/action_bar_half_margin">
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/rebate_note"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/action_bar_quarter_margin"
+                    android:paddingBottom="@dimen/action_bar_quarter_margin"
                     android:textSize="@dimen/fontsize_10sp"
                     android:text="@string/rebate_text"
                     android:textColor="@color/staples_dark_gray"/>
@@ -68,33 +68,34 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="@dimen/action_bar_quarter_margin"
+                    android:paddingBottom="@dimen/action_bar_quarter_margin"
                     android:paddingLeft="@dimen/left_margin"
                     android:paddingRight="@dimen/right_margin"
-                    android:paddingBottom="@dimen/action_bar_quarter_margin"
+                    android:textSize="@dimen/fontsize_12sp"
                     android:textColor="@color/staples_white"
                     android:background="@drawable/rounded_corner"/>
                 <com.staples.mobile.cfa.widget.RatingStars
                     android:id="@+id/rating"
-                    style="@style/SmallRatingStars"
-                    android:layout_marginTop="@dimen/elevation_high"/>
+                    android:paddingTop="@dimen/action_bar_half_margin"
+                    style="@style/SmallRatingStars"/>
             </LinearLayout>
-            <FrameLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="@dimen/progress_bar_width"
+                android:layout_gravity="bottom"
+                android:paddingRight="@dimen/margin_16dp">
                 <ImageView
                     android:id="@+id/bundle_action"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:padding="@dimen/action_bar_half_margin"/>
+                    android:layout_alignParentRight="true"/>
                 <ProgressBar
                     android:id="@+id/bundle_whirlie"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@dimen/progress_bar_width"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:padding="@dimen/action_bar_half_margin"
+                    android:layout_alignParentRight="true"
                     android:visibility="gone"/>
-            </FrameLayout>
+            </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
