--- a/app/src/main/res/drawable/sku_round_layout.xml
+++ b/app/src/main/res/drawable/sku_round_layout.xml
@@ -5,7 +5,7 @@
         android:color="@color/staples_white" >
     </solid>
     <stroke
-        android:width="1dp"
+        android:width="@dimen/sku_border_width"
         android:color="@color/staples_middle_gray" >
     </stroke>
     <corners
