--- a/app/src/main/res/layout/bundle_item_tall.xml
+++ b/app/src/main/res/layout/bundle_item_tall.xml
@@ -67,7 +67,7 @@
                 android:paddingRight="@dimen/right_margin"
                 android:paddingBottom="@dimen/action_bar_quarter_margin"
                 android:textColor="@color/staples_white"
-                android:background="@drawable/rounded_corner"/>
+                android:background="@drawable/rounded_corner_red"/>
             <com.staples.mobile.cfa.widget.RatingStars
                 android:id="@+id/rating"
                 style="@style/SmallRatingStars"
