--- a/app/src/main/res/layout/bundle_item_wide.xml
+++ b/app/src/main/res/layout/bundle_item_wide.xml
@@ -73,7 +73,7 @@
                     android:paddingRight="@dimen/right_margin"
                     android:textSize="@dimen/fontsize_12sp"
                     android:textColor="@color/staples_white"
-                    android:background="@drawable/rounded_corner"/>
+                    android:background="@drawable/rounded_corner_red"/>
                 <com.staples.mobile.cfa.widget.RatingStars
                     android:id="@+id/rating"
                     android:paddingTop="@dimen/action_bar_half_margin"
