--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar">
-        <item name="android:colorAccent">@color/staples_red</item>
-    </style>
+    <style name="AppTheme" parent="android:Theme.Holo.Light.NoActionBar"/>
 
     <!-- ActionBar styles -->
     <style name="ActionBarBadgeStyle">
@@ -194,7 +192,6 @@
         <item name="android:paddingLeft">@dimen/sku_padding_10</item>
         <item name="android:textColor">@color/staples_dark_gray</item>
     </style>
-
     <style name="SkuDetailHeader">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
