creating some padding to make sure we have some clickable area

--- a/app/src/main/res/layout/drawer_account.xml
+++ b/app/src/main/res/layout/drawer_account.xml
@@ -20,5 +20,6 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:gravity="right"
+        android:padding="@dimen/action_bar_half_margin"
         style="@style/DrawerStyle"/>
 </LinearLayout>
